--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         button:hover {
             background-color: rgb(55, 55, 223);
         }
+        @media (max-width:375px){
+            .container{
+                width: 100%;
+            }
+        }
     </style>
 </head>
 
